﻿FIXES
- Sanitise null strings in paths.
- Fix armor panels reverting to 2 thickness.

v1.4.12.2
FIXES
- Fix negative HP issue with Reactive Armor.
- Fix CalcShrapnelDamage potentially reporting a negative number for damage.
- Add some recursion checks to ModuleCase.
- Add check to prevent setting Weapon material to Wood.
- Can no longer change Armor Panel hull material.
- SRBs no longer explode when empty if BattleDamage enabled.
- Fixes Fuel Tank explosion yield increasing when associated resource(s) is empty.
- Empty Ammo boxes will no longer explode when destroyed.
IMPROVEMENTS
- Re-add Firebottles, SelfSealing Tank option to Making History Soyuz tank.

v1.4.12.1
FIXES
- Fix stack overflow in CASE explosions from detonating SRBs.
- Fix NRE in PooledRockets.
- Fix ordering of Gameplay settings.
- Fix localisation for new Reset Material toggle.
- Take a copy of the collider list from overlapSphereColliders to avoid potential issues since it's static and ProcessingBlastSphere can be called recursively.
IMPROVEMENTS
- General:
	- Reduce the weighting of rocket hits in the parsing script.
	- Add some more debugging to inter-competition debug statements.

v1.4.12.0
FIXES
- Sort the protoVessel part list during spawning to fix the badly rooted vessel spawning bug.
- Fix BDA part category placement to be usable on low resolution screens.
- Don't add explosive forces when paintball mode is enabled.
- Armor will no longer take damage when using Paintball Mode.
- Subsection targeting GUI label no longer reverts to CoM.
- Paintballs will no longer overpenetrate if base ammo type is armor piercing.
- Shatterable armor materials now properly take full armor loss amount each shattering hit, instead of a reducing amount every subsequent hit.
- Armor panel armor values no longer vary based on part orientation.
- Armor Panel buoyancy fixed.
- Rockets no longer calculate shrapnel hits twice.
- Fixes unit conversion error in armor spalling calcs.