@@ -1,6 +1,7 @@
 ﻿FIXES
 - Sanitise null strings in paths.
 - Fix armor panels reverting to 2 thickness.
+- Fix some errors in the MM patch for parts.
 
 v1.4.12.2
 FIXES
